<resources>
    <string name="app_name">Parental Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="login_title">Login</string>
    <string name="main_title">Main</string>
    <string name="forget_title">Forget Password</string>
    <string name="registration_title">Register</string>
    <string name="login_email">Email Address:</string>
    <string name="login_userid">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_create_account">Register</string>
    <string name="login_login">Login</string>
    <string name="login_forget_password">Forget Password  \&#063; </string>
    <string name="login_remember">Remember me</string>
    <string name="login_should_verify">Please verify your email before using it to login!</string>
    <string name="login_forget_password_label">Forget Password ?</string>
    <string name="login_forget_password_info">Please enter your registered Email address</string>
    <string name="login_forget_password_comfirm">Confirm</string>
    <string name="login_forget_password_question"> \&#63; </string>
    <string name="already_have_account">Do you already have a parent account?</string>
    <string name="login_start_using">Child account creation</string>
    <string name="step1">step1</string>
    <string name="step2">step2</string>
    <string name="step3">step3</string>
    <string name="login_change_title">Change Password</string>
    <string name="login_change_oldpass">Password:</string>
    <string name="login_change_newpass">Set new Password:</string>
    <string name="login_change_conpass">Confirm Password:</string>
    <string name="registration_register">Registration</string>
    <string name="registration_serial_label">Enter your serial number</string>
    <string name="registration_serial_label_hint">The serial number is located at the back of your MEEP!</string>
    <string name="registration_serial_info">Serial Number</string>
    <string name="registration_serial_toast">Please enter your serial number</string>
    <string name="registration_legal_lable">Legal Agreement</string>
    <string name="registration_legal_agree">I have read and accept the terms of service.</string>
    <string name="registration_legal_agree_button">Agree</string>
    <string name="registration_legal_agree_toast">Please agree with the Terms of service</string>
    <string name="registration_legal_agree_promotion">Contact me about Oregon Scientific\'s products,news,events and promotions.</string>
    <string name="registration_create_account_owner_title">Enter Owner information</string>
    <string name="registration_create_account_username">Name</string>
    <string name="registration_create_account_id">ID</string>
    <string name="registration_create_account_setpass">Password</string>
    <string name="registration_create_account_conpass">Confirm Password</string>
    <string name="registration_create_account_birthday">Birthday</string>
    <string name="registration_create_account_birthday_day">Day</string>
    <string name="registration_create_account_birthday_month">Month</string>
    <string name="registration_create_account_birthday_year">Year</string>
    <string name="registration_create_account_birthday_dd">DD</string>
    <string name="registration_create_account_birthday_mm">MM</string>
    <string name="registration_create_account_birthday_yyyy">YYYY</string>
    <string name="registration_create_account_gender">Gender</string>
    <string name="registration_create_account_name_first">First Name</string>
    <string name="registration_create_account_name_last">Last Name</string>
    <string name="registration_create_account_email">Email Address</string>
    <string name="registration_create_account_conemail">Confirm Email Address</string>
    <string name="registration_create_account_tel">Tel</string>
    <string name="registration_create_account_address">Address</string>
    <string name="registration_create_account_location">Country:</string>
    <string name="registration_create_account_location_hint">The country that you choose here will also be the country of the Store that will be displayed on your MEEP!</string>
    <string name="registration_create_account_language">Language:</string>
    <string name="registration_create_account_required">*Required</string>
    <string name="registration_create_account_gender_male">Male</string>
    <string name="registration_create_account_gender_female">Female</string>
    <string name="registration_create_account_toast">Do you accept?</string>
    <string name="registration_create_account_title">Personal Information</string>
    <string name="registration_email_verify_title">Finished! Your child account has been created successfully. Enjoy your MEEP!</string>
    <string name="registration_email_verify_label">Email verification</string>
    <string name="registration_email_verify_hint">You will receive a confirmation email shortly.</string>
    <string name="registration_email_verify_text">A confirmation email has been sent to you. \nIf you can\'t receive it, tap on the Resend button below:</string>
    <string name="registration_email_verify_button_resend">Resend Confirmation email</string>
    <string name="registration_email_verify_button_back">Back to Login Page</string>
    <string name="main_welcome">Welcome</string>
    <string name="main_logout">Logout</string>
    <string name="main_button_back">Back</string>
    <string name="main_button_kid">Kid</string>
    <string name="main_button_menu">Menu</string>
    <string name="main_menu_title">Menu</string>
    <string name="main_menu_icon">User Icon</string>
    <string name="main_menu_name">Username</string>
    <string name="main_menu_notification">Notifications</string>
    <string name="main_menu_account">Child Account</string>
    <string name="main_menu_account_manage">Account Management</string>
    <string name="main_menu_coin">Coins</string>
    <string name="main_menu_coin_default">0</string>
    <string name="main_menu_parental">Parental Settings</string>
    <string name="main_menu_noti">16</string>
    <string name="main_menu_logout">Logout</string>
    <string name="main_page_kin_name_pre">Child</string>
    <string name="main_page_logs_after">\'s Activities</string>
    <string name="main_page_account_after">\'s MEEP!</string>
    <string name="main_page_logs_show_more">Show More Logs</string>
    <string name="main_page_notifications_show_more">Show More Notifications</string>
    <string name="main_page_account_add_new">Add New</string>
    <string name="main_page_notification_after">%s\'s Requests</string>
    <string name="main_page_notification_pre">Child\'s Requests</string>
    <string name="main_page_notification_approve">Approve</string>
    <string name="main_page_notification_reject">Reject</string>
    <string name="main_page_account_label">Account Management</string>
    <string name="main_page_account_manage_boss">MEEP! Boss</string>
    <string name="main_page_account_manage_er">MEEPer</string>
    <string name="main_page_account_manage_evisor">MEEPevisor</string>
    <string name="main_page_account_manage_evisor_invite">Invite someone to become a Supervisor for your child!</string>
    <string name="main_page_account_manage_evisor_email">Email:</string>
    <string name="main_page_account_manage_add">Add MEEPevisor</string>
    <string name="main_page_account_manage_edit">Edit %1$s Info</string>
    <string name="main_page_account_manage_edit_label">%1$s Info</string>
    <string name="main_page_account_manage_edit_label2">%1$s\'s MEEP!</string>
    <string name="main_page_account_manage_invite">\'s MEEP!</string>
    <string name="main_page_account_manage_add_hint">Type an Email address</string>
    <string name="main_page_coins_label">MEEP! Coins</string>
    <string name="main_page_coins_allocate_title">MEEP! Coins Allocation</string>
    <string name="main_page_coins_allocate_label">Allocate Coins</string>
    <string name="main_page_coins_allocate_1">How many coins do you want to give %1$s?</string>
    <string name="main_page_coins_allocate_11">100</string>
    <string name="main_page_coins_allocate_2">Amount of coins allocated to your child\'s account:</string>
    <string name="main_page_coins_allocate_22">Coins allocated</string>
    <string name="main_page_coins_allocate_23">Child Name</string>
    <string name="main_page_coins_allocate_3">Now have</string>
    <string name="main_eidt_info_title">Edit Info</string>
    <string name="main_add_child_title">Add a MEEPer</string>
    <string name="main_add_child_name">Name</string>
    <string name="main_add_child_serial_number">Serial Number</string>
    <string name="main_add_child_info">Please enter your child\'s name and serial number</string>
    <string name="main_select_child_title">Select A Child account to Migrate</string>
    <string name="main_select_child_label">MEEPer</string>
    <string name="main_portal_setting_label_apps">Time Limit</string>
    <string name="main_portal_setting_label_apps_title">Apps Time Limit</string>
    <string name="main_portal_setting_label_communicator">Communicator</string>
    <string name="main_portal_setting_label_purchase">Download Permission</string>
    <string name="main_portal_setting_label_purchase_meepstore">MEEP! Store Purchase</string>
    <string name="main_portal_setting_label_purchase_googleplay">Google Play ™ Items</string>
    <string name="main_portal_setting_label_purchase_inapp">In-App Purchase on the MEEP! Store</string>
    <string name="main_portal_setting_label_internet">Security</string>
    <string name="main_portal_setting_label_internet_security">Suggested Website &amp; YouTube Video only</string>
    <string name="main_portal_setting_label_timelimit">%s&#160;Time Limit</string>
    <string name="main_home">Home</string>
    <string name="main_coins">Coins</string>
    <string name="main_suggestion">Suggestion</string>
    <string name="main_kid_icon_image">Chil avatar Image</string>
    <string name="main_text_time">time</string>
    <string name="main_text_unit">Unit</string>
    <string name="main_text_divi">-</string>
    <string name="main_text_type">type</string>
    <string name="main_text_type_google">Apps</string>
    <string name="main_text_type_store">Store</string>
    <string name="main_text_type_coins">Coins</string>
    <string name="main_text_type_friend">Friend</string>
    <string name="main_text_message">message</string>
    <string name="main_text_name">name</string>
    <string name="common_button_back">Back</string>
    <string name="common_button_confirm">Confirm</string>
    <string name="common_button_invite">Invite</string>
    <string name="common_button_close">Close</string>
    <string name="common_button_next">Next</string>
    <string name="common_copyright_info">Copyright©2012 Oregon Scientific Global Disribution Ltd. All Rights Reserved</string>
    <string name="common_term_of_service">Terms of Service</string>
    <string name="common_privacy_policy">Privacy Policy</string>
    <string name="no_network">Your MEEP! is not connected to the Wi-Fi. Please select an available Wi-Fi network before to proceed</string>
    <string name="no_record">No others record</string>
    <string name="email_empty">Please type in your email first</string>
    <string name="password_empty">Please type in your password</string>
    <string name="request_approve">This Request is Approved!</string>
    <string name="expired_verify_email">The period allocated for your email verification has expired! Your account is now deactivated and the settings of your MEEP! are back to the default ones. To reactivate your account, please click on the link provided in the verification email that has been previously sent to you. Or if you can\'t find this email, please tap on the Resend button below.</string>
</resources>